--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,6 +9,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 env:
   SERVICE_NAME: cloudscan-orchestrator
   DOCKER_REGISTRY: docker.io
